--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
-h1,
-h2,
-h3,
-p,
-li {
-  font-family: sans-serif;
+* {
+}
+
+body {
   color: #444;
+  font-family: sans-serif;
+  border-top: 10px solid #1098ad;
 }
 
 h1,
@@ -136,3 +136,7 @@ a:active {
 footer p {
   color: green !important;
 } */
+
+nav {
+  font-size: 18px;
+}
