--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,20 @@
 * {
+  margin: 0;
+  padding: 0;
 }
 
 body {
   color: #444;
   font-family: sans-serif;
   border-top: 10px solid #1098ad;
+}
+
+nav {
+  font-size: 18px;
+}
+
+article {
+  margin-bottom: 60px;
 }
 
 h1,
@@ -21,10 +31,13 @@ h1 {
 
 h2 {
   font-size: 40px;
+  margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -36,10 +49,18 @@ h4 {
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 15px;
+}
+
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 
 li {
   font-size: 20px;
+  margin-bottom: 10px;
 }
 
 /* footer p {
@@ -74,12 +95,22 @@ li {
 
 .main-header {
   background-color: #f7f7f7;
+  /*   padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px; */
+  padding: 20px 40px; /*20 vertical values, 40 horizontal values*/
+  margin-bottom: 60px;
+}
+
+.post-header {
+  margin-bottom: 40px;
 }
 
 aside {
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
+  padding: 50px 0px; /*50 vertical values, 0 horizontal values*/
 }
 
 /* .first-li {
@@ -91,6 +122,7 @@ li:first-child {
 }
 li:last-child {
   font-style: italic;
+  margin-bottom: 0px;
 }
 li:nth-child(even) {
   /* color: red; */
@@ -136,7 +168,3 @@ a:active {
 footer p {
   color: green !important;
 } */
-
-nav {
-  font-size: 18px;
-}
