add inline block margin

--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,14 @@ li {
   list-style: none;
 }
 
+.container {
+  width: 800px;
+  /* center page */
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 0 auto; /*0 vertical values, auto horizontal values*/
+}
+
 .main-header {
   background-color: #f7f7f7;
   /*   padding: 20px;
@@ -174,4 +182,14 @@ footer p {
 .post-img {
   width: 100%;
   height: auto;
+}
+
+nav a:link {
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
 }
