--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
   color: #444;
   font-family: sans-serif;
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 
 nav {
@@ -31,7 +32,8 @@ h1 {
 
 h2 {
   font-size: 40px;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
+  position: relative;
 }
 
 h3 {
@@ -70,6 +72,28 @@ li {
 /* article header p {
   font-style: italic;
 } */
+
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+h3 + p::first-line {
+  /* color: red; */
+}
+
+h2::after {
+  content: "TOP";
+  background-color: #ffe70e;
+  color: #444;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -10;
+  right: -25px;
+}
 
 #author {
   font-style: italic;
@@ -192,4 +216,14 @@ nav a:link {
 
 nav a:link:last-child {
   margin-right: 0;
+}
+
+button {
+  font-size: 27px;
+  padding: 20px;
+  cursor: pointer;
+
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
 }
